# reproducible-scientific-notebook-template

./: .env.example  LICENSE  README.md  julia-example.jl  lotka_volterra.py  pyproject.toml
juliaexample/: Manifest.toml  Project.toml
juliaexample/src/: ConfigManager.jl  lotka-volterra.xml  my-notebook.ipynb
project-data/my-simulation/: config_v1.yml  config_v2.yml
project-data/my-simulation/data/: v1_simulation_results_julia.csv  v1_simulation_results_python.csv
python-example/notebooks/: config_manager.py  my-notebook.ipynb  my-notebook.py
python-example/utils/: config_manager.py
